*** When upgrading, don't forget to: "cd bin ; ./checksetup.pl" ***
*** Also, it is _highly_ advisable to backup your data before upgrading ***

Version 1.8.5

* Modified log_accum.pl so that deleted files are also included in the
  topic.

Version 1.8.4

* The topic properties page now displays the start tag, end tag and
  module parameters if they were used when the topic was created.
  Contribution by Robert Hudson <codestriker@go2town.co.uk>.

* The repository property has been changed to be a read-only property
  in the topic properties page, from Robert Hudson.

* The repository selection drop-down is only selected if there is more
  than one repository configured in the system, from Robert Hudson.

* If a topic is not in open state, then the "topic information" and
  "topic comments" pages are modified to readonly, and adding new
  comments is disabled.  From Robert Hudson.

* In the table of contents, display the total number of lines added
  and removed for each file.  This gives the reviewer a quick idea
  where the major changes in the review are.  From Robert Hudson.

* There is a new configuration option @project_states which controls
  whether a project can have its state changed to 'Closed',
  which prevents new topics being created within it, and the state
  'Deleted', which will delete the project and all its member topics.
  Both of these new states are optional, and are not available by
  default.  From Robert Hudson.

* When sending emails involving more than one CC recipient, the email
  sending may fail because a space wasn't put after each comma.

* Created the CodestrikerClient module in bin which can create a
  new topic non-interactively.  The intention is for this module to be
  used from scripts that need to create new topics, for example, from
  a CVS post-commit script.

* Modified custom CVS post-commit scripts so that a Codestriker topic
  is created for each CVS commit, along with a sent email.  The