@@ -178,7 +178,7 @@ $default_file_to_view = -1;
 # There is no problem added new states dynamically, or changing the textual
 # names.  Note, the initial topic state must be the first element.  Unless
 # you know what you are doing, these should be left unchanged.
-@topic_states = ('Open', 'Closed', 'Committed');
+@topic_states = ('Open', 'Closed', 'Committed', 'Obsoleted');
 
 # Indicate if topics can be deleted.  Turning this to false can be useful for
 # "anonymous" installations of codestriker.
